--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,15 @@ li {
     list-style: none;
 }
 
+/* button {
+    all: unset;
+} */
+
+/* .hire-me {
+background-color: green;
+padding: 5px 10px;
+border-radius: 4px;
+} */
 /* .hire-me {
     text-decoration: none;
     color: white;
@@ -139,6 +148,27 @@ Home
     transition: .6s ease;
 }
 
+/* .hire-me {
+    padding: 10px 35px;
+    font-size: 1em;
+    background-color: transparent;
+    border: 1px solid --white;
+    color: var(--white);
+    outline: none;
+    -webkit-transition: .6s ease;
+    -o-transition: .6s ease;
+    transition: .6s ease;
+} */
+
+
+/* .hire-me:hover {
+    cursor: pointer;
+    background-color: var(--white);
+    color: var(--black);
+    -webkit-box-shadow: 0 0 5px var(--white), 0 0 10px var(--white), 0 0 15px var(--white);
+    box-shadow: 0 0 5px var(--white), 0 0 10px var(--white), 0 0 15px var(--white);
+    font-weight: bold;
+} */
 .btn:hover {
     cursor: pointer;
     background-color: var(--white);
@@ -178,6 +208,7 @@ About section
 #pic img {
     width: 575px;
     height: 400px;
+    margin-right: 15px;
 }
 
 #intro {
